fix to check on mobile margin-top

--- a/src/assets/styles/app/_base.scss
+++ b/src/assets/styles/app/_base.scss
@@ -106,5 +106,5 @@ a {
 
 .wrapper {
   position: relative;
-  min-height: 100vh;
+  height: 100vh;
 }
